WELD-2820 Explicitly enable annotation processors for compiler plugin. This is required for JDK 23+ since we use Jboss Logging.